# CircuitPython_TTP229

./: README.rst  pyproject.toml  requirements.txt  ttp229.py
.github/workflows/: build.yml  failure-help-text.yml  release_gh.yml  release_pypi.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: ttp229_simpletest.py
